# AI

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scribe/: __init__.py  api.py  grammar.py  llm.py  qna.py  similarity.py  summary.py  utils.py
scribe/llm/: __init__.py  gemini.py  ollama.py
scribe/similarity/: similarity.py
scripts/: install.sh  test.py
similarity/: bert.py  cosine_similarity.py  index.html  requirements.txt  sbert.py  script.js  server.py  similarity.py  style.css
