[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribe"
version = "0.0.1"
authors = [
  { name="Youssef Hesham" },
]
description = "GradGuide AI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GradGuide/AI"
